--- a/web/src/styles.css
+++ b/web/src/styles.css
@@ -1,4 +1,19 @@
-.App {
+*,
+*::before,
+*::after {
+  padding: 0;
+  margin: 0;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+html {
+  box-sizing: inherit;
+}
+
+body {
+  font-size: 62/5%;
   font-family: sans-serif;
-  text-align: center;
 }
