--- a/web/src/styles.css
+++ b/web/src/styles.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Ma+Shan+Zheng&display=swap");
+
 *,
 *::before,
 *::after {
@@ -15,5 +17,19 @@ html {
 
 body {
   font-size: 62/5%;
-  font-family: sans-serif;
+  font-family: "Ma Shan Zheng", cursive, sans-serif;
+}
+
+.app__img-container {
+  height: 50vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.app__img {
+  display: block;
+  height: 100%;
+  width: 100%;
+  max-width: 50rem;
 }
