--- a/web/src/styles.css
+++ b/web/src/styles.css
@@ -15,8 +15,12 @@ html {
   box-sizing: inherit;
 }
 
+:root {
+  --font-default: 1.6rem;
+}
+
 body {
-  font-size: 62/5%;
+  font-size: 62.5%;
   font-family: "Ma Shan Zheng", cursive, sans-serif;
 }
 
@@ -25,6 +29,10 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.app__img-caption {
+  font-size: var(--font-default);
 }
 
 .app__img {
