--- a/web/src/styles.css
+++ b/web/src/styles.css
@@ -1,5 +1,8 @@
+/* THIRD PARTY PACKAGES */
+
 @import url("https://fonts.googleapis.com/css?family=Ma+Shan+Zheng&display=swap");
 
+/* BASE*/
 *,
 *::before,
 *::after {
@@ -15,17 +18,27 @@ html {
   box-sizing: inherit;
 }
 
-:root {
-  --font-default: 1.6rem;
-}
-
 body {
   font-size: 62.5%;
   font-family: "Ma Shan Zheng", cursive, sans-serif;
 }
 
+/* VARIABLES */
+
+:root {
+  --font-default: 1.6rem;
+
+  --color-primary: orangered;
+}
+
+/* PAGES */
+
+.app {
+  height: 100vh;
+}
+
 .app__img-container {
-  height: 50vh;
+  height: 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -40,4 +53,26 @@ body {
   height: 100%;
   width: 100%;
   max-width: 50rem;
+}
+
+/* COMPONENTS */
+
+.link:link,
+.link:visited {
+  color: var(--color-primary);
+  font-size: var(--font-default);
+  text-decoration: none;
+}
+
+.nav--primary {
+  position: fixed;
+  top: 0;
+  left: 1rem;
+  width: 1vw;
+}
+
+/* UTILITIES */
+
+.u-center-text {
+  text-align: center;
 }
