--- a/web/src/styles.css
+++ b/web/src/styles.css
@@ -1,5 +1,3 @@
-/* THIRD PARTY PACKAGES */
-
 @import url("https://fonts.googleapis.com/css?family=Ma+Shan+Zheng&display=swap");
 
 /* BASE*/
@@ -29,6 +27,12 @@ body {
   --font-default: 1.6rem;
 
   --color-primary: orangered;
+  --color-white: #fff;
+
+  --border-primary: 2px solid var(--color-primary);
+  --border-radius-default: 5px;
+
+  --max-width--default: 30rem;
 }
 
 /* PAGES */
@@ -38,7 +42,7 @@ body {
 }
 
 .app__img-container {
-  height: 50%;
+  height: 30%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -52,7 +56,7 @@ body {
   display: block;
   height: 100%;
   width: 100%;
-  max-width: 50rem;
+  max-width: var(--max-width--default);
 }
 
 /* COMPONENTS */
@@ -71,8 +75,37 @@ body {
   width: 1vw;
 }
 
+.card {
+  border: var(--border-primary);
+  border-radius: var(--border-radius-default);
+  max-width: var(--max-width--default);
+  position: relative;
+}
+
+.card__img {
+  width: 100%;
+  height: 100%;
+  border-radius: var(--border-radius-default);
+}
+
+.card__cap {
+  font-size: var(--font-default);
+  color: var(--color-white);
+  opacity: 0.6;
+  position: absolute;
+  bottom: 1rem;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+}
+
 /* UTILITIES */
 
 .u-center-text {
   text-align: center;
+}
+
+.u-justify-center {
+  display: flex;
+  justify-content: center;
 }
