fixed putting firstPost on idb

--- a/web/src/styles.css
+++ b/web/src/styles.css
@@ -99,6 +99,15 @@ body {
   width: 100%;
 }
 
+.small {
+  font-size: var(--font-default);
+  padding: 1rem;
+}
+
+.small--primary {
+  color: var(--color-primary);
+}
+
 /* UTILITIES */
 
 .u-center-text {
